test_regress/t/t_property_s_eventually_unsup.out
%Error: t/t_property_s_eventually_unsup.v:14:20: Concurrent assertion has no clock; provide a clocking event, a default clocking, or a clocked procedural context (IEEE 1800-2023 16.16)
                                               : ... note: In instance 't'
   14 |   assert property (s_eventually ##1 1);
      |                    ^~~~~~~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_property_s_eventually_unsup.v:14:3: Concurrent assertion has no clock; provide a clocking event, a default clocking, or a clocked procedural context (IEEE 1800-2023 16.16)
                                              : ... note: In instance 't'
   14 |   assert property (s_eventually ##1 1);
      |   ^~~~~~
%Error-UNSUPPORTED: t/t_property_s_eventually_unsup.v:15:35: Unsupported: cycle delay in s_eventually
                                                           : ... note: In instance 't'
   15 |   assert property (@(negedge clk) s_eventually ##1 1);
      |                                   ^~~~~~~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
